--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <h4> DAYN BRANDON CARRETO BONILLA </h4>
 </div>
 </div>
+
 <div data-role="page" id="page2" data-theme="c">
 <div data-role="header">
 <h1>Dispositivo</h1>
@@ -63,12 +64,12 @@
 <h4> DAYN BRANDON CARRETO BONILLA </h4>
 </div>
 </div>
-<div data-role="page" id="page3" data-theme="b">
+<div data-role="page" id="page3" data-theme="d">
 <div data-role="header">
 <h1>Eventos</h1>
 </div>
 <div data-role="content">
-<div id="disp">
+<div>
 <h2>Historia</h2>
 <ul id="eHistoria">
 </ul>
